# roland

./: .envrc  .gitignore  Cargo.toml  README.md  config.example.toml  config.toml  default.nix  flake.nix
assets/: 99-roland-input.rules  setup-permissions.sh
nix/: overlay.nix
nix/modules/: roland.nix
src/: config.rs  events.rs  gesture.rs  main.rs  output.rs
