[package]
name = "roland"
version = "0.1.0"
edition = "2024"

[dependencies]
evdev = "0.13.2"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
input = "0.9.1"
libc = "0.2.178"
tracing = "0.1"
tracing-subscriber = "0.3.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.10"
rustix = { version = "0.38", features = ["event"] }
thiserror = "2.0.18"
